<resources>
    <string name="app_name">Shoe Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login:</string>
    <string name="password">Password:</string>
    <string name="new_login">New Login</string>
    <string name="btn_login">Login</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="skip">Skip</string>
    <string name="title_instructions">Instructions</string>
    <string name="shoe_list">Shoe List</string>
    <string name="label_fragment_login">Login</string>
    <string name="label_fragment_welcome">Welcome Shoe Store</string>
    <string name="label_fragment_instructions">Instructions</string>
    <string name="label_fragment_list">Shoes List</string>
    <string name="label_fragment_add_shoe">Add Shoe</string>
    <string name="menu_detail">Detail</string>
    <string name="menu_logout">Logout</string>
    <string name="label_detail">Detail</string>
    <string name="shoe_name">Shoe name:</string>
    <string name="company">Company:</string>
    <string name="shoe_size">Shoe size:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>