<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".screens.login.LoginFragment">

            <TextView
                android:id="@+id/txt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="112dp"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.278"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/txt_login"
                app:layout_constraintTop_toBottomOf="@+id/txt_login" />

            <TextView
                android:id="@+id/txt_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="@+id/edt_login"
                app:layout_constraintTop_toBottomOf="@+id/edt_login" />

            <EditText
                android:id="@+id/edt_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="@+id/txt_pass"
                app:layout_constraintTop_toBottomOf="@+id/txt_pass" />

            <Button
                android:id="@+id/btn_newLogin"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:layout_marginStart="60dp"
                android:text="@string/new_login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_pass"
                app:layout_constraintVertical_bias="0.097" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="60dp"
                android:text="@string/btn_login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/btn_newLogin"
                app:layout_constraintTop_toBottomOf="@+id/edt_pass"
                app:layout_constraintVertical_bias="0.098" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>