<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_finalName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="@string/shoe_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/txt_finalSize"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_size"
                    app:layout_constraintEnd_toEndOf="@id/txt_finalName"
                    app:layout_constraintStart_toStartOf="@id/txt_finalName"
                    app:layout_constraintTop_toBottomOf="@id/txt_finalName"/>

                <TextView
                    android:id="@+id/txt_finalCompany"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/company"
                    app:layout_constraintEnd_toEndOf="@id/txt_finalSize"
                    app:layout_constraintStart_toStartOf="@id/txt_finalSize"
                    app:layout_constraintTop_toBottomOf="@id/txt_finalSize"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>